--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
   <title>WebGL Now Playing Hack</title>
   <meta http-equiv="content-type" content="text/html; charset=ISO-8859-1">
   <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="gh-fork-ribbon.min.css" />
   <script type="text/javascript" src="glmatrix.js"></script>
   <script type="text/javascript" src="script.js"></script>
 </head>
 <body>
   <canvas id="canvas" style="border: none; width:100%; height:100%;" width="1200" height="800"></canvas><br/>
   <div id="biglogin" class="biglogin"><a onclick="login()">Sign in to Spotify</a></div>
-  <a class="login" onclick="login()">login</a>
   <div id="toast" class="toast"><span id="text"></span><span id="text2"></span></div>
   <div class="trackposition" id="trackposition"><div class="fill" id="trackpositionfill"></div></div>
   <script>
@@ -20,5 +20,6 @@
     ga('create', 'UA-49750240-1', 'auto');
     ga('send', 'pageview');
   </script>
+  <a class="github-fork-ribbon" href="https://github.com/possan/webgl-spotify-connect-now-playing-screen-example" title="Fork me on GitHub">Fork me on GitHub</a>
 </body>
 </html>
