--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-  <title>WebGL Now Playing Hack</title>
+  <title>Spotify 3D Visualizer</title>
   <meta http-equiv="content-type" content="text/html; charset=ISO-8859-1">
   <link rel="stylesheet" href="style.css" />
   <link rel="stylesheet" href="gh-fork-ribbon.min.css" />
@@ -13,12 +13,14 @@
   <div id="toast" class="toast"><span id="text"></span><span id="text2"></span></div>
   <div class="trackposition" id="trackposition"><div class="fill" id="trackpositionfill"></div></div>
   <script>
+    /* these are @possan's analytics, so lets disable them
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
     m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
     })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
     ga('create', 'UA-49750240-1', 'auto');
     ga('send', 'pageview');
+    */
   </script>
   <a class="github-fork-ribbon" href="https://github.com/possan/webgl-spotify-connect-now-playing-screen-example" title="Fork me on GitHub">Fork me on GitHub</a>
 </body>
